# cycspec-simulator

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup.py
cycspec_simulator/: __init__.py  _version.py  baseband.py  baseband_data.py  baseband_model.py  cycspec.py  cycspec_gpu.py  fold.py  folding.py  gpuinfo.py  guppi_raw.py  interpolation.py  make_raw.py  metadata.py  phase_predictor.py  plot_helpers.py  polarization.py  psrfits-doc-comments.toml  scattering.py  scintillation.py  template_profile.py  time.py
examples/: B1937+21.Rcvr1_2.GUPPI.15y.x.sum.sm  B1937+21.ipynb  B1937+21_pred.par  benchmarking.ipynb  gpu-simulation.py  idealized_model_display.py  multi-channel-scattering.ipynb  process-file-gpu.py  process-file.py  realistic_model_rawoutput.py  reread.ipynb  simulate-cpu.ipynb  simulate-dask.ipynb  simulate-gpu.ipynb  simulate.ipynb  symmetric-vs-asymmetric.ipynb  template-recovery.ipynb  test-open.ipynb
tests/: test_template_profile.py
