[build-system]
requires = ["setuptools >= 61.0", "versioneer[toml] == 0.28"]
build-backend = "setuptools.build_meta"

[project]
name = "cycspec-simulator"
dynamic = ["version"]
authors = [
    {name = "Ross Jennings", email = "ross.jennings@nanograv.org"},
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.6",
    "scipy>=1.5.3",
    "matplotlib>=3.3.3",
    "astropy>=4.0.4",
    "numba>=0.57.0",
    "dask>=2021.03.0",
]

[project.scripts]
cycspec-make-raw = "cycspec_simulator.make_raw:main"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "cycspec_simulator/_version.py"
versionfile_build = "cycspec_simulator/_version.py"
tag_prefix = "v"
parentdir_prefix = "cycspec-simulator-"
