[build-system]
requires = ["setuptools >= 61.0", "versioneer[toml] == 0.28"]
build-backend = "setuptools.build_meta"

[project]
name = "cycspec-simulator"
dynamic = ["version"]
authors = [
    {name = "Ross Jennings", email = "ross.jennings@nanograv.org"},
]
requires-python = ">=3.9" # required by numba 0.57
dependencies = [
    "numpy>=1.21.6", # required by numba 0.57
    "scipy>=1.5.3", # any python 3.9 compatibile version
    "matplotlib>=3.3.3", # any python 3.9 compatibile version
    "astropy>=4.0.4", # any python 3.9 compatibile version
    "numba>=0.57.0", # nopython mode features needed for fold_numba()
    "dask>=2023.2.1", # dask.array.random.default_rng()
]

[project.scripts]
cycspec-make-raw = "cycspec_simulator.make_raw:main"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "cycspec_simulator/_version.py"
versionfile_build = "cycspec_simulator/_version.py"
tag_prefix = "v"
parentdir_prefix = "cycspec-simulator-"
