[build-system]
requires = ["setuptools >= 61.0", "versioneer[toml] == 0.28"]
build-backend = "setuptools.build_meta"

[project]
name = "cycspec-simulator"
dynamic = ["version"]
authors = [
    {name = "Ross Jennings", email = "ross.jennings@nanograv.org"},
]
requires-python = ">=3.7" # for time.perf_counter_ns()
dependencies = [
    "numpy>=1.15.0",
    "scipy>=1.2.1",
    "matplotlib>=2.2.3",
    "astropy>=3.1",
    "numba>=0.40.0", # nopython mode features from 0.57.0 needed for fold_numba()
    "dask>=0.19.0", # 2023.2.1 needed for dask.array.random.default_rng()
]

[project.optional-dependencies]
cuda = [
    "cupy",
    "cuda-python",
]

[project.scripts]
cycspec-make-raw = "cycspec_simulator.make_raw:main"
cycspec-gpuinfo = "cycspec_simulator.gpuinfo:print_device_info"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "cycspec_simulator/_version.py"
versionfile_build = "cycspec_simulator/_version.py"
tag_prefix = "v"
parentdir_prefix = "cycspec-simulator-"
